--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+.myOverlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(00,00,00, 0.5);
+}
+
+.myDialog {
+  width: 80%;
+  height: 20%;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  z-index: 101;
+  background-color: white;
+}
+
+.activeAction {
+  color: red;
+  font-size: 1.3rem;
+}
