--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,7 @@
-<router-outlet></router-outlet>
-
-<h1>FullControl 2.0</h1>
 <!-- <button (click)="onPlayAudio()">Click</button> -->
-
-
-<div class="myDialog" *ngIf="this.newAction">
-  <div *ngIf="!this.newAction.isPause"><span>Name: </span><input (keyup)="onKeyUpNewAction($event)" /><br /></div>
-  <div>
-    <span>Duration: </span>
-    <button (click)="onChangeDuration(-10)">-10</button>
-    <button (click)="onChangeDuration(-5)">-5</button>
-    <span width="100px">{{this.newAction.duration}}</span>
-    <button (click)="onChangeDuration(+5)">+5</button>
-    <button (click)="onChangeDuration(+10)">+10</button>
-  </div>
-  <button (click)="onClickConfirmAdd()">Add</button><button (click)="onClickCancelAdd()">Cancel</button>
+<div class="navigationBar">
+  <a routerLink="/new" routerLinkActive="active"><i class="navigationIcon fas fa-plus-square"></i></a>
+  <a routerLink="/active" routerLinkActive="active"><i class="navigationIcon fas fa-stopwatch"></i></a>
+  <a routerLink="/load" routerLinkActive="active"><i class="navigationIcon fas fa-file-upload"></i></a>
 </div>
-<div class="myOverlay" *ngIf="this.newAction" ></div>
-
-
-
-
-<div *ngIf="this.workout">
-  <span>Duration: {{(""+(workout.getDuration() / 60)).split(".")[0]}}:{{workout.getDuration() % 60}}</span>
-  <ul>
-    <li *ngFor="let round of this.workout.rounds; index as i">
-      <span>Round {{i+1}} - Duration: {{round.getDuration()}}</span>
-      <button (click)="duplicateRound(i)">00</button>
-      <button (click)="deleteRound(i)">X</button>
-      <ul>
-        <li *ngFor="let action of round.exercises; index as j">
-          <span [ngClass]="{'activeAction': action.isActive}">{{action.name}}: {{action.duration}}</span><button (click)="deleteAction(i, j)">X</button>
-        </li>
-        <button (click)="addPause(i)">+Pause</button>
-        <button (click)="addExercise(i)">+ Exercise</button>
-      </ul>
-    </li>
-    <button (click)="addRound($event)">Add round</button>
-  </ul>
-  <button (click)="onCreate()">Create</button>
-  <button (click)="onTest()">Test</button>
-
-</div>
+<router-outlet></router-outlet>
