--- a/src/styles.less
+++ b/src/styles.less
@@ -1,20 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-@primary: #2196f3;
-@primary-light: #6ec6ff;
-@primary-dark: #0069c0;
-@secondary: #ffa000;
-@secondary-light: #ffd149;
-@secondary-dark: #c67100;
-@grey: #eeeef0;
-@transparent: rgba(0,0,0,0);
+@import "colors.less";
 
 body {
   margin: 0px;
   font-family: 'Verdana', sans-serif;
-  background: @grey;
-  a {
-    color: black;
-  }
+  background: #333333;
+  color: #cccccc;
 }
 
 .myOverlay {
@@ -46,56 +37,32 @@ body {
   font-size: 3rem;
 }
 
-
-.navigationBar {
-  // background-color: fade(@primary-dark, 80%);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 5rem;
-    .navigationIcon {
-      font-size: 3rem;
-      // width: 28%;
-      padding-left: 10%;
-      padding-right: 10%;
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-    table {
-      width: 100%;
-      border: none;
-    }
-    td {
-      padding: none;
-      text-align: center;
-      width: 33%;
-      background-color: @primary;
-    }
-    td.activeNav {
-      background-color: @secondary;
-    }
-}
-
 .button {
   cursor: pointer;
   height: 3rem;
   padding: 1rem;
   margin: 5px 5px 5px 5px;
   border: 1px solid @transparent;
-  background: fade(@primary-dark, 30%);
+  background: fade(@primary-dark, 100%);
   border-radius: 3px;
   transition-duration: 500ms;
+
   &:hover {
     border: 1px solid @primary-dark;
     background: @transparent;
   }
 }
 
+.testButton {
+  background-color: #ff0000;
+}
+
 li {
   list-style-type: none;
+
   div {
     height: 3rem;
+
     span.actionDetail {
       margin-top: 1rem;
     }
@@ -117,12 +84,21 @@ li {
   width: 100%;
   position: fixed;
   bottom: 0px;
-  background: @transparent;
+  background: fade(#333333, 80%);
   text-align: right;
 }
 
 ul {
   padding-inline-start: 10px;
+}
+
+.newWorkoutAction {
+  .actionDetail {
+    margin-top: 20px;
+  }
+  &:nth-child(odd) {
+    background: #555555;
+  }
 }
 
 .smallButton {
