--- a/src/app/active-workout/active-workout.component.less
+++ b/src/app/active-workout/active-workout.component.less
@@ -67,7 +67,8 @@
 				margin-top: -@percentage-font-size;
         transition: width @transition-length;
         span {
-          font-size: @percentage-font-size;
+          font-size: 4rem;
+          padding-top: 1rem;
         }
 			}
 		}
