--- a/src/app/styles.less
+++ b/src/app/styles.less
@@ -88,3 +88,16 @@
     padding-top: 1rem;
   }
 }
+
+
+.circularIcon {
+  font-size: 4rem;
+}
+
+.numberText {
+  font-size: 4rem;
+  margin-left: -1rem;
+  margin-top: 1rem;
+  width: 4rem;
+  text-align: center;
+}
