--- a/src/app/active-workout/active-workout.component.less
+++ b/src/app/active-workout/active-workout.component.less
@@ -13,7 +13,9 @@
 	@percentage-font-size: 22px;
 	@percentage-text-width: 57px;
 
-	margin: 50px;
+  margin-left: calc((100% - @circle-size) * 0.5);
+  margin-bottom: calc((100% - @circle-size) * 0.5);
+  // margin-top:
 	width:  @circle-size;
 	height: @circle-size;
 
@@ -140,4 +142,9 @@
 .roundNumber {
   width: 30px;
   margin-right: 30px;
+}
+
+.progressContainer {
+  width: 100%;
+  vertical-align: center;
 }
