--- a/src/app/active-workout/active-workout.component.less
+++ b/src/app/active-workout/active-workout.component.less
@@ -1,150 +1,93 @@
 
 @import '../../colors.less';
 
-.radial-progress {
-	@circle-size: 200px;
-	@circle-background: grey;
-	@circle-color: blue;
-	@inset-size: 180px;
-	@inset-color: #333333;
-	@transition-length: 1s;
-	@shadow: 6px 6px 10px rgba(0,0,0,0.2);
-	@percentage-color: red;
-	@percentage-font-size: 22px;
-	@percentage-text-width: 57px;
 
-  margin-left: calc((100% - @circle-size) * 0.5);
-  margin-bottom: calc((100% - @circle-size) * 0.5);
-  // margin-top:
-	width:  @circle-size;
-	height: @circle-size;
-
-	background-color: @circle-background;
-	border-radius: 50%;
-	.circle {
-		.mask, .fill, .shadow {
-			width:    @circle-size;
-			height:   @circle-size;
-			position: absolute;
-			border-radius: 50%;
-		}
-		.shadow {
-			box-shadow: @shadow inset;
-		}
-		.mask, .fill {
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
-			transition: -webkit-transform @transition-length;
-			transition: -ms-transform @transition-length;
-			transition: transform @transition-length;
-			border-radius: 50%;
-		}
-		.mask {
-			clip: rect(0px, @circle-size, @circle-size, @circle-size/2);
-			.fill {
-				clip: rect(0px, @circle-size/2, @circle-size, 0px);
-				background-color: @circle-color;
-			}
-		}
-	}
-	.inset {
-		width:       @inset-size;
-		height:      @inset-size;
-		position:    absolute;
-		margin-left: (@circle-size - @inset-size)/2;
-		margin-top:  (@circle-size - @inset-size)/2;
-
-		background-color: @inset-color;
-		border-radius: 50%;
-		box-shadow: @shadow;
-		.percentage {
-			height:   @percentage-font-size;
-			width:    @percentage-text-width;
-			position: absolute;
-			top:      (@inset-size - @percentage-font-size) / 2;
-			left:     (@inset-size - @percentage-text-width) / 2;
-
-			line-height: 2rem;
-			.numbers {
-				margin-top: -@percentage-font-size;
-        transition: width @transition-length;
-        span {
-          font-size: 4rem;
-          padding-top: 1rem;
-        }
-			}
-		}
-	}
-
-	@i: 0;
-	@increment: 180deg / 100;
-	.loop (@i) when (@i <= 100) {
-		&[data-progress="@{i}"] {
-			.circle {
-				.mask.full, .fill {
-					-webkit-transform: rotate(@increment * @i);
-					-ms-transform: rotate(@increment * @i);
-					transform: rotate(@increment * @i);
-				}
-				.fill.fix {
-					-webkit-transform: rotate(@increment * @i * 2);
-					-ms-transform: rotate(@increment * @i * 2);
-					transform: rotate(@increment * @i * 2);
-				}
-			}
-			.inset .percentage .numbers {
-				width: @i * @percentage-text-width + @percentage-text-width;
-			}
-		}
-		.loop(@i + 1);
-	}
-	.loop(@i);
+.circle(@size) {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - calc(@size/2));
+  top: calc(50% - calc(@size/2));
+  width: @size;
+  height: @size;
 }
 
-.activeAction > i {
-  -webkit-animation: fa-beat 1s infinite linear;
-  animation: fa-beat 1s infinite linear;
-}
-@-webkit-keyframes fa-beat {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(2);
-    transform: scale(2);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
+@size: 200px;
+.progress-pie-chart {
+  width: @size;
+  height: @size;
+  border-radius: 50%;
+  background-color: @primary;
+  position: relative;
+  &.gt-50 {
+    background-color: @primary;
   }
 }
-@keyframes fa-beat {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
+.ppc-progress {
+  .circle(@size);
+  clip: rect(0, @size, @size, calc(@size/2));
+  .ppc-progress-fill {
+    .circle(@size);
+    clip: rect(0, calc(@size/2), @size, 0);
+    background: @primary;
+    transform: rotate(60deg);
   }
-  50% {
-    -webkit-transform: scale(2);
-    transform: scale(2);
+  .gt-50 & {
+    clip: rect(0, calc(@size/2), @size, 0);
+    .ppc-progress-fill {
+      clip: rect(0, @size, @size, calc(@size/2));
+      background: @primary;
+    }
   }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
+}
+.ppc-percents {
+  .circle(calc(@size/1.15));
+  background: #333333;
+  text-align: center;
+  display: table;
+  span {
+    display: block;
+    font-size: 2.6em;
+    font-weight: bold;
+    color: @primary;
   }
+}
+.pcc-percents-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.progress-pie-chart {
+  margin: 50px auto 0;
 }
 
 .activeAction {
-  color: @secondary;
+  color: red !important;
+  animation: pulse 2s infinite;
 }
 
-
-.roundNumber {
-  width: 30px;
-  margin-right: 30px;
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-text-shadow: 0 0 0 0 red;
+  }
+  70% {
+      -webkit-text-shadow: 0 0 0 10px blue;
+  }
+  100% {
+      -webkit-text-shadow: 0 0 0 0 blue;
+  }
 }
-
-.progressContainer {
-  width: 100%;
-  vertical-align: center;
+@keyframes pulse {
+  0% {
+    -moz-text-shadow: 0 0 0 0 red;
+    text-shadow: 0 0 0 0 red;
+  }
+  70% {
+      -moz-text-shadow: 0 0 0 10px blue;
+      text-shadow: 0 0 0 10px blue;
+  }
+  100% {
+      -moz-text-shadow: 0 0 0 0 blue;
+      text-shadow: 0 0 0 0 blue;
+  }
 }
